// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-dnt5va soui-divider-wrapper c-h3lygj soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-dnt5va soui-divider-wrapper c-h3lygj soui-divider-horizontal cli6f7g soui-divider-with-text c-pbmwb3 soui-divider-with-text-center"
  >
    <span
      class="c3q2wre soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-dnt5va soui-divider-wrapper c-h3lygj soui-divider-horizontal cli6f7g soui-divider-with-text c-ye3ntp soui-divider-with-text-left"
  >
    <span
      class="c3q2wre soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-dnt5va soui-divider-wrapper c-h3lygj soui-divider-horizontal cli6f7g soui-divider-with-text c-l3cw0 soui-divider-with-text-right"
  >
    <span
      class="c3q2wre soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
